创建文章评论

--- a/src/styles/cover.less
+++ b/src/styles/cover.less
@@ -1,6 +1,7 @@
 // 首页顶部导航
 @nav-bar-background-color:#007bff;
 @nav-bar-title-text-color:#fff;
+@nav-bar-icon-color:#fff;
 
 // tab栏导航
 @tabs-bottom-bar-color:#007bff;
